--- a/app/src/main/res/layout/activity_pantalla__principal.xml
+++ b/app/src/main/res/layout/activity_pantalla__principal.xml
@@ -22,19 +22,21 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.017">
 
-        <SearchView
+        <EditText
             android:id="@+id/busqueda"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="10">
-
-        </SearchView>
+            android:layout_weight="1"
+            android:ems="10"
+            android:hint="Ingrese su ISBN"
+            android:inputType="number" />
 
         <Button
             android:id="@+id/boton_buscar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="iniciarBusqueda"
             android:text="Buscar" />
     </LinearLayout>
 
