--- a/app/src/main/res/layout/fragment_resultados.xml
+++ b/app/src/main/res/layout/fragment_resultados.xml
@@ -19,7 +19,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:orientation="vertical"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,79 +45,122 @@
                 android:layout_weight="2"
                 android:orientation="horizontal">
 
-                <LinearLayout
+                <ScrollView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
+                    android:layout_weight="1">
 
-                    <TextView
-                        android:id="@+id/textView3"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:fontFamily="@font/alfa_slab_one"
-                        android:text="    Título del Libro"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
+                        android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/titulo"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2"
-                        android:fontFamily="@font/alef"
-                        android:text="Título del Libro:"
-                        android:textSize="14sp" />
-
-                    <TextView
-                        android:id="@+id/textView4"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2"
-                        android:fontFamily="@font/alfa_slab_one"
-                        android:text="    Autores"
-                        android:textSize="18sp" />
-
-                    <ScrollView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2">
-
-                        <LinearLayout
+                        <TextView
+                            android:id="@+id/textView3"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="vertical">
+                            android:layout_weight="1"
+                            android:fontFamily="@font/alfa_slab_one"
+                            android:text="    Título del Libro"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
 
-                            <TextView
-                                android:id="@+id/autores"
+                        <TextView
+                            android:id="@+id/titulo"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="2"
+                            android:fontFamily="@font/alef"
+                            android:text="Título del Libro:"
+                            android:textSize="14sp" />
+
+                        <TextView
+                            android:id="@+id/textView4"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="2"
+                            android:fontFamily="@font/alfa_slab_one"
+                            android:text="    Autor(es)"
+                            android:textSize="16sp" />
+
+                        <ScrollView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="2">
+
+                            <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:fontFamily="@font/alef"
-                                android:text="TextView"
-                                tools:text="    Autores" />
-                        </LinearLayout>
-                    </ScrollView>
+                                android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/textView5"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/alfa_slab_one"
-                        android:text="    ISBN"
-                        android:textSize="18sp" />
+                                <TextView
+                                    android:id="@+id/autores"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:fontFamily="@font/alef"
+                                    android:text="TextView"
+                                    android:textSize="14sp"
+                                    tools:text="    Autores" />
+                            </LinearLayout>
+                        </ScrollView>
 
-                    <TextView
-                        android:id="@+id/isbn"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/alef"
-                        android:text="    Autores"
-                        android:textSize="14sp" />
+                        <TextView
+                            android:id="@+id/textView5"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:fontFamily="@font/alfa_slab_one"
+                            android:text="    Año de publicación"
+                            android:textSize="16sp" />
 
-                </LinearLayout>
+                        <TextView
+                            android:id="@+id/año"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:fontFamily="@font/alef"
+                            android:text="    Año"
+                            android:textSize="14sp" />
+
+                        <TextView
+                            android:id="@+id/textView2"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:fontFamily="@font/alfa_slab_one"
+                            android:text="    Editorial"
+                            android:textSize="16sp" />
+
+                        <TextView
+                            android:id="@+id/editorial"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:fontFamily="@font/alef"
+                            android:text="    editorial"
+                            android:textSize="14sp" />
+
+                        <TextView
+                            android:id="@+id/textView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:fontFamily="@font/alfa_slab_one"
+                            android:text="    ISBN"
+                            android:textSize="16sp" />
+
+                        <TextView
+                            android:id="@+id/isbn"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:fontFamily="@font/alef"
+                            android:text="isbn"
+                            android:textSize="14sp" />
+
+                    </LinearLayout>
+                </ScrollView>
 
             </LinearLayout>
         </LinearLayout>
@@ -171,7 +214,7 @@
         android:layout_height="match_parent"
         android:background="@android:color/background_light"
         android:orientation="vertical"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/coincidencias"
